--- a/app/src/main/res/layout/dialog_update.xml
+++ b/app/src/main/res/layout/dialog_update.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="8dp"
@@ -12,14 +13,25 @@
         android:background="@android:drawable/editbox_background"
         android:gravity="top"
         android:hint="Enter text"
+        android:fontFamily="@font/nunito_semibold"
         android:lines="4"
         android:padding="12dp" />
 
-    <Button
+    <com.ornach.nobobutton.NoboButton
         android:id="@+id/btnUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Update" />
+        android:layout_marginBottom="20dp"
+        android:layout_weight="1"
+        android:padding="10dp"
+        app:nb_backgroundColor="#ff4081"
+        app:nb_borderColor="#FFFFFF"
+        app:nb_borderWidth="2dp"
+        app:nb_focusColor="#ba2d65"
+        app:nb_fontIcon="&#xf021;"
+        app:nb_radius="5dp"
+        app:nb_text="Update"
+        app:nb_textColor="#FFF" />
 
 </LinearLayout>
