--- a/app/src/main/res/layout/list_row_main.xml
+++ b/app/src/main/res/layout/list_row_main.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardCornerRadius="12dp"
     android:layout_margin="4dp">
 
     <LinearLayout
+        android:background="@drawable/card_bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -12,10 +15,11 @@
 
         <TextView
             android:id="@+id/tvText"
+            android:fontFamily="@font/nunito_semibold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/ivEdit"
