--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#f06292</color>
+    <color name="colorPrimaryDark">#ba2d65</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="card_bg_color">#f6f6f6</color>
 </resources>
